# DynoDoc

./: .gitattributes  .gitignore  .pre-commit-config.yaml  DEPLOY.md  render.yaml
.github/workflows/: ci.yml  daily-payout.yml
client/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/public/: _redirects
client/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
client/src/app/: App.tsx  AppLayout.tsx  RequireAuth.tsx
client/src/components/ui/: AIThinking.tsx  Breadcrumb.tsx  Button.tsx  Card.tsx  ConfirmDialog.tsx  DynoCoin.tsx  ProgressBar.tsx  Spinner.tsx
client/src/features/auth/: queries.ts  types.ts
client/src/features/auth/api/: auth.ts
client/src/features/auth/components/: Avatar.tsx  GoogleButton.tsx  LoginCard.tsx  ProfileCard.tsx  SignInGate.tsx
client/src/features/auth/hooks/: useCurrentUser.ts
client/src/features/courses/: api.ts  constants.ts  queries.ts  types.ts
client/src/features/courses/components/: AskDynoDoc.tsx  ChatBubble.tsx  IntakeHistory.tsx  LearningPath.tsx  QuizPanel.tsx
client/src/features/courses/pages/: CoursePage.tsx  DashboardPage.tsx  IntakePage.tsx  LecturePage.tsx
client/src/features/game/: api.ts  constants.ts  queries.ts  types.ts
client/src/features/game/components/: PlayerChips.tsx
client/src/features/game/pages/: ArcadePage.tsx  ConnectionsPage.tsx  LeaderboardPage.tsx  RewardsPage.tsx
client/src/features/landing/: LandingPage.tsx
client/src/features/landing/components/: AuroraBackground.tsx  Features.tsx  FinalCTA.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  StartLearningButton.tsx
client/src/features/pricing/: PricingPage.tsx
client/src/features/profile/: PersonaCard.tsx  ProfilePage.tsx
client/src/features/theme/: ThemeProvider.tsx  ThemeToggle.tsx  context.ts
client/src/lib/: apiClient.ts  celebrate.ts  config.ts  relativeTime.ts
docs/: README.md
docs/version_1/: 00-product-idea.md  01-features-and-flow.md  02-architecture.md  03-data-model.md  04-vertical-slices-and-testing.md  05-api-and-contracts.md
server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
server/app/domains/course/: dtos.py  models.py  progress.py  repository.py  service.py
server/app/domains/gamification/: achievements.py  connections.py  dtos.py  models.py  repository.py  rewards.py
server/app/domains/user/: dtos.py  events.py  models.py  persona.py  repository.py
server/app/entrypoints/http/: deps.py  errors.py  middleware.py
server/app/entrypoints/http/routers/: auth.py  courses.py  game.py  health.py  intake.py  lectures.py  users.py
server/app/entrypoints/http/schemas/: auth.py  connections.py  course.py  health.py  intake.py  persona.py  problem.py  quiz.py  reward.py  tutor.py
server/app/platform/ai/: builder.py  prompts.py  run.py  text_generator.py
server/app/platform/ai/agents/: architect.py  quizzer.py  tutor.py  writer.py
server/app/platform/auth/: google_oauth.py  session.py
server/app/platform/observability/: logging.py
server/app/platform/persistence/: base.py  database.py  mixins.py
server/app/platform/persistence/migrations/: env.py
server/app/platform/persistence/migrations/versions/: 0001_users.py  0002_intake_sessions.py  0003_courses_lectures.py  0004_docs.py  0005_references.py  0006_quiz_progress.py  0007_gamification.py  0008_user_personas.py  0009_coin_economy.py  0010_redemption_address.py
server/app/platform/search/: curator.py  duckduckgo.py
server/app/processes/course_generation/: curation.py  pipeline.py  quiz.py  writer.py
server/app/processes/profile/: stats.py
server/app/processes/tutoring/: answer.py
server/app/runtime/: application.py  bootstrap.py  lifespan.py  request_context.py  settings.py
server/app/shared/: ids.py
server/app/shared/contracts/: curation.py  identity.py  llm.py  search.py
server/app/shared/errors/: __init__.py
server/scripts/: reset_test_data.py  seed_game.py  settle_daily.py
server/tests/: conftest.py
server/tests/e2e/: test_auth.py  test_courses.py  test_game.py  test_health.py  test_intake.py  test_lectures.py  test_persona.py  test_profile_stats.py
server/tests/fixtures/: fakes.py
server/tests/integration/course/: test_generation.py  test_intake_flow.py  test_lecture_writer.py  test_progress.py  test_tutor.py
server/tests/integration/gamification/: test_economy.py
server/tests/integration/user/: test_user_persistence.py
server/tests/unit/: test_request_context.py
server/tests/unit/observability/: test_logging.py
server/tests/unit/search/: test_curator.py
