[project]
name = "dynodoc-server"
version = "0.1.0"
description = "DynoDoc backend — AI-native learning platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "greenlet>=3.0",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "authlib>=1.3",
    "itsdangerous>=2.2",
    "loguru>=0.7",
    "google-adk>=1.0",
    "litellm>=1.40",
    "ddgs>=9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "import-linter>=2.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "pre-commit>=4.0",
]

# ----------------------------------------------------------------------------
# Ruff — linting + import sorting + formatting
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import order)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "PT",   # flake8-pytest-style
    "ASYNC",# flake8-async
    "TID",  # flake8-tidy-imports
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.flake8-bugbear]
# These FastAPI helpers are designed to be called in argument defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Header"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"  # absolute imports only — enforces clean module boundaries

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is fine in tests
# Alembic migrations are generated/boilerplate-ish: allow long lines + the
# metadata-registration import that looks unused.
"app/platform/persistence/migrations/**" = ["E501", "F401"]

# ----------------------------------------------------------------------------
# mypy — strict static typing on the application code
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
show_error_codes = true
mypy_path = "."
# Alembic migration scripts use dynamic alembic.op/context APIs — not worth
# strict-typing the generated boilerplate.
exclude = ["app/platform/persistence/migrations/"]

[[tool.mypy.overrides]]
module = ["authlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["google.adk.*", "google.genai.*", "litellm.*", "ddgs.*"]
ignore_missing_imports = true

# ----------------------------------------------------------------------------
# pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"

# ----------------------------------------------------------------------------
# coverage
# ----------------------------------------------------------------------------
[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true

# ----------------------------------------------------------------------------
# import-linter — enforces the architecture's dependency rules (docs §10.1)
# so the layering can't rot into spaghetti. Run with `uv run lint-imports`.
# ----------------------------------------------------------------------------
[tool.importlinter]
root_package = "app"

# Layered direction (high -> low). Lower layers must never import upper ones:
#   shared is the leaf; domains can't import processes/entrypoints; etc.
# `platform` and `runtime` are intentionally NOT in the chain: domains may use
# platform.persistence (session/Base/mixins) directly, and platform helpers may
# touch domain models — the pragmatic style proven in the reference project.
[[tool.importlinter.contracts]]
name = "Layered architecture (entrypoints -> processes -> domains -> shared)"
type = "layers"
layers = [
    "app.entrypoints",
    "app.processes",
    "app.domains",
    "app.shared",
]
